--- a/package.json
+++ b/package.json
@@ -3,30 +3,41 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "component": "^1.1.0",
+    "firebase": "^10.7.2",
+    "framer-motion": "^11.0.3",
+    "lodash": "^4.17.21",
+    "lodash.flatten": "^4.4.0",
+    "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll": "^0.1.5",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-intersection-observer": "^9.6.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
+    "swiper": "9",
     "typescript": "^4.4.2",
+    "validator": "^13.11.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "craco eject",
+    "lint": "eslint \"src/**/*.{js, jsx, ts, tsx}\"",
+    "lint:fix": "eslint --fix \"src/**/*.{js, jsx, ts, tsx}\""
   },
   "browserslist": {
     "production": [
@@ -39,5 +50,29 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "packageManager": "yarn@4.0.2",
+  "devDependencies": {
+    "@babel/preset-react": "^7.23.3",
+    "@craco/craco": "^7.1.0",
+    "@emotion/babel-plugin": "^11.11.0",
+    "@testing-library/jest-dom": "^6.2.1",
+    "@types/eslint": "^8",
+    "@types/lodash": "^4.14.202",
+    "@types/lodash.flatten": "^4.4.9",
+    "@types/qs": "^6.9.11",
+    "@types/testing-library__jest-dom": "^6.0.0",
+    "@types/validator": "^13.11.8",
+    "@types/webpack-bundle-analyzer": "^4",
+    "alias": "^0.0.5",
+    "craco": "^0.0.3",
+    "craco-alias": "^3.0.1",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.33.2",
+    "prettier": "^3.2.4",
+    "webpack-bundle-analyzer": "^4.10.1"
   }
 }
